feature: rfc7807 ProblemDetail for schema errors (#96)
* Update spec to use ProblemDetail error response schemas

* Refactor exceptions to expose contextual reason

* Wire exception reason codes into service layer
